--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 	<body ontouchstart="">
 		<!--<script src="js/three.min.js"></script>-->
 		<script src="js/app.js"></script>
+		<script src="js/lodash.js"></script>
 
+		<div id="view" style="height: 800px; width: 2000px;"></div>
+		
 		<div style="display:none;">
 			<img id="test-image-1-1" src="1-1.png" />
 			<img id="test-image-1-2" src="1-2.png" />
