--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 				font-size: 12px;
 				background-color: #FFF;
 				margin: 0px;
-				/*overflow: hidden;*/
+				overflow: hidden;
+			}
+			canvas {
+			    transform: scale(3);
+				transform-origin: left top;
+			}
+			.controls{
+				float:left;
 			}
 			#edit {
 				position: absolute;
