--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 			body {
 				font-family: Helvetica, Arial, sans-serif;
 				font-size: 12px;
-				background-color: #FFF;
+				background-color: #bbb;
 				margin: 0px;
 				overflow: hidden;
 			}
-			canvas {
+			.main-canvas {
 			    transform: scale(3);
 				transform-origin: left top;
 			}
+			.sprites{
+				float:left;
+			}
 			.controls{
+				margin-top: 100px;
 				float:left;
 			}
 			#edit {
@@ -38,6 +42,7 @@
 	<body ontouchstart="">
 		<!--<script src="js/three.min.js"></script>-->
 		<script src="js/app.js"></script>
+		<script src="js/stats.js"></script>		
 		<script src="js/lodash.js"></script>
 		
 		<div class="controls">
